src/app/views/css/css.component.scss
:host {
  .box {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: lightblue;
    border: 1px solid lightblue;
    border-radius: 12px;
    height: 200px;
    margin-top: 100px;
    width: 200px;
    animation: animateMe 5s linear 0s infinite ;
    p {
      // color: inherit;
      animation: animateMeToo 5s linear 0s infinite ;
    }
  }

  @keyframes animateMe {
    0% {
      rotate :10deg;
      background-color: lightblue;
    }
    10% {
      background-color: rgb(129, 200, 223);
      color: white;

    }
    40% {
      background-color: rgb(46, 172, 214);
      color: white;

    }
    80% {
      background-color: rgb(20, 102, 130);
      color: white;
    }
    100% {
      rotate :100deg;
      background-color: rgb(3, 98, 129);
      color: white;
    }

  }

  @keyframes animateMeToo {
    0% {
      rotate :-10deg;
    }
    10% {

    }
    40% {

    }
    80% {
    }
    100% {
      rotate :-100deg;
    }

  }

  .loader-box {
    background-color: lightblue;
    height: 200px;
    width: 200px;
    margin-top: 24px;
    display: flex;
    justify-content: center;
    align-items: center;

    .loader {
      height: 50px;
      width: 50px;
      border-radius: 50%;
      border: 2px solid rgb(236, 234, 234);
      border-top-color: red;
      animation: loaderSymbol 5s linear infinite;
    }
    @keyframes loaderSymbol {
      0% {
        transform: rotate(-10deg)
      }
      25% {
        transform: rotate(-100deg)
      }
      50% {
        transform: rotate(-200deg)
      }
      100% {
        transform: rotate(-360deg)
      }
    }
  }
  @media(max-width: 200px){
    p {
      color: rgb(243, 243, 245);
    }
  }
  @media(min-width: 200px){
    p {
      color: rgb(30, 28, 207);
    }
  }
  @media(min-width: 400px){
    p {
      color: rgb(98, 11, 55);
    }
  }

  @media(min-width: 600px){
    p {
      color: rgb(238, 7, 15);
    }
  }
  .do-not-show {
    display: none;
  }
  .show1 {
    position: relative;
  }
  .show1::hover {
    transition: all .5s ease-in-out;
  }
  .show1:hover::before {
    content: "";
    position: absolute;
    inset: -12px;
    border-radius: 12px;
    background-color: rgba(220, 220, 220, .5);
  }
}

